Adicionei um páragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui cumque aliquid aliquam expedita porro quia quis accusamus enim accusantium! Repudiandae iusto, in nostrum tempore inventore ipsa earum optio ad suscipit, sed atque. Sunt et sed aspernatur illum? Accusamus optio mollitia ratione dolore exercitationem, placeat quasi cupiditate doloribus aperiam voluptatem atque quia alias iusto fuga temporibus officia! Cumque quaerat ea neque pariatur accusamus deserunt exercitationem?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime est aut explicabo eveniet laborum ducimus animi. Voluptatibus, velit. Saepe, nostrum.</p>
 </body>
 </html>
